Changes to files now with nav menu shake and extras fixed around the files like the project holders have been made smaller and look better on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,32 @@ main.active{
   }
 }
 
+.list-items a.active{
+  color: #0ddbe2;
+}
+
+.list-items a:hover {
+
+  animation: shake 1.7s;
+
+  
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 @media (min-width:600px){
   main{
     left: var(--width);
@@ -209,7 +235,8 @@ main.active{
 }
 
 .hero-section{
-  background: url("../assets/MainBG\(2\).jpg");
+  background-image: url("../assets/mainbg.jpg");
+
   height: 700px;
   padding: 1px;
   background-attachment: fixed;
@@ -265,7 +292,7 @@ span{
 .container-project {
   display: flex;
   flex-wrap: wrap;
-  max-width: 600px;
+  max-width: 300px;
   margin: 1vw auto;
   position: relative;
   text-align: center;
